--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -3,6 +3,15 @@
 <div class="row">
   <div class="container form_panel">
 
+    <div class="row">
+      <nav>
+        <ul class="pager">
+          <li class="previous"><%= link_to 'Back', jobs_path %></li>
+          <li class="next"> <%= link_to 'Show', @job %></li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="panel panel-info form-bs">
       <div class="panel-heading">
         <h4>Editing job</h4>
@@ -11,8 +20,6 @@
         <%= render 'form' %>
       </div>
 
-      <%= link_to 'Show', @job %> |
-      <%= link_to 'Back', jobs_path %>
     </div>
 
   </div>
