--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -58,9 +58,7 @@
     </div>
     <div class="field">
       <%= f.label :jobtype %><br/>
-      <%= f.select :jobtype,
-                   options_for_select([["Once", "once"], ["Schedule", "schedule"]],
-                                      @job.status) %>
+      <%= f.select :jobtype,options_for_select(Type.find_by_cat_title("Jobtype").map { |lc| [lc.value, lc.key] },@job.jobtype) %>
     </div>
     <div class="field">
       <%= f.label :status %><br/>
